--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <div id="app"></div>
-
+    
+    <button class="addTaskFab">+</button>
 
     <script type="module" src="app.js"></script>
 </body>
