--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="css/variables.css">
     <link rel="stylesheet" href="css/tasks.css">
     <link rel="stylesheet" href="css/components.css">
+    <link rel="stylesheet" href="css/menu.css">
+
 
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,1,0&icon_names=sunny" />    
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,1,0&icon_names=dark_mode" />
@@ -29,7 +31,6 @@
 <body>
     <div id="app"></div>
     
-    <button class="addTaskFab">+</button>
 
     <script type="module" src="app.js"></script>
 </body>
