--- a/index.html
+++ b/index.html
@@ -1,17 +1,15 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lianer - Responsive Project Management Dashboard</title>
-
-    <link rel="manifest" href="manifest.webmanifest" />
-    <link rel="icon" type="image/png" href="icons/icon-192.png" />
-    <meta name="theme-color" content="#3b82f6" />
-    <link rel="stylesheet" href="css/variables.css" />
-    <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="css/dashboard.css" />
-    <link rel="stylesheet" href="css/tasks.css" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>LIA App</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/dashboard.css">
+    <link rel="stylesheet" href="css/variables.css">
+    <link rel="stylesheet" href="css/tasks.css">
+    <link rel="stylesheet" href="css/components.css">
+    <link rel="stylesheet" href="css/menu.css">
 
     <link
       rel="stylesheet"
