Show notification for installing app

--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 
 <body>
   <!-- Front-end Toasts -->
-  <div id="toast-container" class="toast-container" aria-live="polite"></div>
+  <div id="toast-container" class="toast-container" aria-live="polite" role="region" aria-label="Notifications"></div>
 
-  <div id="app">
+  <main id="app">
     <div class="initial-loader" aria-busy="true" aria-label="Laddar applikation">
       <style>
         .initial-loader {
@@ -70,7 +70,7 @@
       </style>
       Laddar...
     </div>
-  </div>
+  </main>
 
 
 </body>
