--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <link rel="stylesheet" href="css/contacts.css" />
   </noscript>
 
-  <script async src="node_modules/html5-qrcode/html5-qrcode.min.js"></script>
-  <script async src="node_modules/qrcode-generator/qrcode.js"></script>
+  <script async src="vendor/html5-qrcode.min.js"></script>
+  <script async src="vendor/qrcode.js"></script>
   <script defer type="module" src="app.js"></script>
 
   <script>
